# machine-learning-atmospheric-blocking

./: .gitignore  pyproject.toml  readme.md
.trunk/: trunk.yaml
jobs/: model.sh  propulate.sh
model/: dataset.py  model.py  propulate_search.py  rf.ipynb  test.py  train_test.py  util.py
model/models/: efficientnet_m.py  efficientnet_s.py  inception_v3.py  resnet18.py  resnet50.py
